fixing classes that overlap with bootstrap

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,7 +24,7 @@
 .flex {
     display: flex;
 }
-.container,
+.conteiner,
 .title {
     max-width: 800px;
     margin: 30px auto;
